--- a/.github/actions/artifacts/copy-to-binary-host/action.yml
+++ b/.github/actions/artifacts/copy-to-binary-host/action.yml
@@ -43,14 +43,22 @@ runs:
         kubectl config use-context my-context
       shell: bash
 
+    - name: Get binary-host pod name
+      id: get-pod-name
+      run: |
+        POD_NAME=$(kubectl get pods -n sc -l app=binary-host -o jsonpath='{.items[0].metadata.name}')
+        echo "pod_name=$POD_NAME" >> $GITHUB_OUTPUT
+        echo "Found binary-host pod: $POD_NAME"
+      shell: bash
+
     - name: Create Subdirs (if they don't exist)
       run: |
-        kubectl exec -n sc binary-host -c binary-host -- mkdir -p /tools/${{ inputs.env }}
+        kubectl exec -n sc ${{ steps.get-pod-name.outputs.pod_name }} -c binary-host -- mkdir -p /tools/${{ inputs.env }}
       shell: bash
 
     - name: Delete old partner-chains-node binaries
       run: |
-        kubectl exec -it binary-host -c binary-host -n sc -- find /tools/${{ inputs.env }} -name "partner-chains-node-*" -type f -mtime +30 -delete
+        kubectl exec ${{ steps.get-pod-name.outputs.pod_name }} -c binary-host -n sc -- find /tools/${{ inputs.env }} -name "partner-chains-node-*" -type f -mtime +30 -delete
       shell: bash
 
     - name: Copy binary to binary-host
@@ -59,7 +67,7 @@ runs:
         chmod +x partner-chains-node-binary
         cp partner-chains-node-binary partner-chains-node-latest
         cp partner-chains-node-binary partner-chains-node-${{ inputs.sha }} 
-        kubectl cp partner-chains-node-latest sc/binary-host:/tools/${{ inputs.env }} -c binary-host
-        kubectl cp partner-chains-node-${{ inputs.sha }} sc/binary-host:/tools/${{ inputs.env }} -c binary-host
+        kubectl cp partner-chains-node-latest sc/${{ steps.get-pod-name.outputs.pod_name }}:/tools/${{ inputs.env }} -c binary-host
+        kubectl cp partner-chains-node-${{ inputs.sha }} sc/${{ steps.get-pod-name.outputs.pod_name }}:/tools/${{ inputs.env }} -c binary-host
       shell: bash
     
