add dolos data source crate

--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -101,6 +101,15 @@ partner-chains-db-sync-data-sources = { workspace = true, features = [
 	"block-participation",
 	"bridge",
 ] }
+partner-chains-dolos-data-sources = { workspace = true, features = [
+	"block-source",
+	"candidate-source",
+	"governed-map",
+	"mc-hash",
+	"sidechain-rpc",
+	"block-participation",
+	"bridge",
+] }
 partner-chains-mock-data-sources = { workspace = true, features = [
 	"block-source",
 	"candidate-source",
