--- a/Cargo.toml
+++ b/Cargo.toml
@@ -321,6 +321,7 @@ sp-block-producer-metadata = { path = "toolkit/block-producer-metadata/primitive
 
 # Data Sources
 partner-chains-db-sync-data-sources = { path = "toolkit/data-sources/db-sync" }
+partner-chains-dolos-data-sources = { path = "toolkit/data-sources/dolos" }
 partner-chains-mock-data-sources = { path = "toolkit/data-sources/mock", default-features = false }
 
 # Governed Map
