--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -119,6 +119,7 @@ partner-chains-mock-data-sources = { workspace = true, features = [
 	"block-participation",
 	"bridge",
 ] }
+partner-chains-data-source-metrics = { workspace = true }
 tokio = { workspace = true }
 sp-block-participation = { workspace = true, features = ["std"] }
 sp-block-producer-metadata = { workspace = true, features = ["std"] }
