--- a/demo/node/Cargo.toml
+++ b/demo/node/Cargo.toml
@@ -101,6 +101,15 @@ partner-chains-db-sync-data-sources = { workspace = true, features = [
 	"block-participation",
 	"bridge",
 ] }
+partner-chains-dolos-data-sources = { workspace = true, features = [
+	"block-source",
+	"candidate-source",
+	"governed-map",
+	"mc-hash",
+	"sidechain-rpc",
+	"block-participation",
+	"bridge",
+] }
 partner-chains-mock-data-sources = { workspace = true, features = [
 	"block-source",
 	"candidate-source",
@@ -110,6 +119,7 @@ partner-chains-mock-data-sources = { workspace = true, features = [
 	"block-participation",
 	"bridge",
 ] }
+partner-chains-data-source-metrics = { workspace = true }
 tokio = { workspace = true }
 sp-block-participation = { workspace = true, features = ["std"] }
 sp-block-producer-metadata = { workspace = true, features = ["std"] }
