--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -854,12 +854,42 @@ jobs:
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
           K8S_SERVER: ${{ secrets.K8S_SERVER }}
           K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+      - name: Install and configure kubectl
+        run: |
+          # Install kubectl
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          chmod +x ./kubectl
+          sudo mv ./kubectl /usr/local/bin/kubectl
+          
+          # Configure kubectl
+          kubectl config set-cluster my-cluster --server=${{ secrets.K8S_SERVER }} --insecure-skip-tls-verify=true
+          kubectl config set-credentials github-actions --token=${{ secrets.K8S_SA_TOKEN }}
+          kubectl config set-context my-context --cluster=my-cluster --user=github-actions --namespace=default
+          kubectl config use-context my-context
+        shell: bash
+      - name: Setup database port-forwarding
+        run: |
+          # Start port-forwarding for databases in background
+          kubectl port-forward -n ci-preview service/ci-preview-validator-1-service 5432:5432 &
+          kubectl port-forward -n sc service/gh-actions-postgres-service 5433:5432 &
+          
+          # Wait for port-forwards to be ready
+          sleep 10
+          
+          # Verify port-forwards are working
+          nc -z localhost 5432 && echo "Port 5432 is ready" || echo "Port 5432 failed"
+          nc -z localhost 5433 && echo "Port 5433 is ready" || echo "Port 5433 failed"
+        shell: bash
       - name: Test against ci-preview
         uses: ./.github/actions/tests/run-e2e-tests
         with:
           env: ci
           decrypt: true
           blockchain: substrate
+          db_sync_host: localhost
+          db_sync_port: 5432
+          db_host: localhost
+          db_port: 5433
 
   post-merge-actions-complete:
     if: ${{ always() && (github.event_name == 'pull_request' && github.event.pull_request.merged == true) }}
