--- a/.github/actions/tests/setup-python/action.yml
+++ b/.github/actions/tests/setup-python/action.yml
@@ -10,15 +10,14 @@ runs:
         kubeconfig_base64: ${{ env.kubeconfig_base64 }}
         K8S_SERVER: ${{ env.K8S_SERVER }}
         K8S_SA_TOKEN: ${{ env.K8S_SA_TOKEN }}
-    - name: Setup python and dependencies
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+        cache: 'pip'
+    - name: Setup python dependencies
       run: |
         cd e2e-tests
-        sudo apt update
-        sudo apt install -y software-properties-common
-        sudo add-apt-repository ppa:deadsnakes/ppa
-        sudo apt update
-        sudo apt install -y python3.12 python3.12-venv python3.12-dev
-        sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 1
         curl -L --silent https://github.com/getsops/sops/releases/download/v3.7.3/sops_3.7.3_amd64.deb > sops.deb && sudo dpkg -i sops.deb && rm sops.deb
         python -m venv venv
         source venv/bin/activate
