--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -362,17 +362,17 @@ jobs:
           fi
 
       - name: Build (Nightly)
-        run: nix develop -c bash -c "RUSTUP_TOOLCHAIN=nightly cargo build --locked"
-
+        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c cargo build --locked
+      
       - name: Test (Nightly)
-        run: nix develop -c bash -c "RUSTUP_TOOLCHAIN=nightly cargo test --locked --all-features"
-
+        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c cargo test --locked --all-features
+      
       - name: Lint (Nightly)
-        run: nix develop -c bash -c "RUSTUP_TOOLCHAIN=nightly RUSTFLAGS=-Dwarnings cargo clippy --locked --all-features"
-
+        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --locked --all-features"
+      
       - name: Generate Rustdocs (Nightly)
-        run: nix develop -c bash -c "RUSTFLAGS='' RUSTDOCFLAGS='--enable-index-page -Zunstable-options' SKIP_WASM_BUILD=1 cargo +nightly doc --locked --no-deps"
-
+        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c bash -c "cargo doc --locked --no-deps -- -Zunstable-options --enable-index-page"
+      
       - name: Upload Rustdocs
         uses: actions/upload-artifact@v4
         with:
