fix: nix shell package

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -362,17 +362,17 @@ jobs:
           fi
 
       - name: Build (Nightly)
-        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c cargo build --locked
+        run: nix shell nixpkgs#rust-bin.nightly.latest.default -c cargo build --locked
       
       - name: Test (Nightly)
-        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c cargo test --locked --all-features
+        run: nix shell nixpkgs#rust-bin.nightly.latest.default -c cargo test --locked --all-features
       
       - name: Lint (Nightly)
-        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --locked --all-features"
+        run: nix shell nixpkgs#rust-bin.nightly.latest.default -c bash -c "RUSTFLAGS=-Dwarnings cargo clippy --locked --all-features"
       
       - name: Generate Rustdocs (Nightly)
-        run: nix shell github:oxalica/rust-overlay#rust-bin.nightly.latest.default -c bash -c "cargo doc --locked --no-deps -- -Zunstable-options --enable-index-page"
-      
+        run: nix shell nixpkgs#rust-bin.nightly.latest.default -c bash -c "cargo doc --locked --no-deps -- -Zunstable-options --enable-index-page"
+        
       - name: Upload Rustdocs
         uses: actions/upload-artifact@v4
         with:
