--- a/toolkit/committee-selection/pallet/Cargo.toml
+++ b/toolkit/committee-selection/pallet/Cargo.toml
@@ -29,6 +29,7 @@ sp-io = { workspace = true }
 sidechain-domain = { workspace = true }
 pallet-session = { workspace = true }
 sp-staking = { workspace = true }
+frame-benchmarking = { workspace = true, optional = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
@@ -50,5 +51,11 @@ std = [
     "sidechain-domain/serde",
     "pallet-session/std",
     "sp-staking/std",
+    "frame-benchmarking?/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
+runtime-benchmarks = [
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
+]
