fix: centralised composite

--- a/.github/actions/artifacts/copy-to-binary-host/action.yml
+++ b/.github/actions/artifacts/copy-to-binary-host/action.yml
@@ -19,20 +19,8 @@ runs:
         role-to-assume: ${{ env.AWS_ROLE_ARN_SECRET }}
         aws-region: eu-central-1
 
-    - name: Install kubectl, kubernetes-helm, and awscli
-      run: |
-        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x ./kubectl
-        sudo mv ./kubectl /usr/local/bin/kubectl
-        VERSION=$(curl --silent "https://api.github.com/repos/helm/helm/releases/latest" | grep '"tag_name"' | sed -E 's/.*"([^"]+)".*/\1/')
-        curl -L "https://get.helm.sh/helm-${VERSION}-linux-amd64.tar.gz" -o helm.tar.gz
-        tar -zxvf helm.tar.gz
-        sudo mv linux-amd64/helm /usr/local/bin/helm
-        rm -rf linux-amd64 helm.tar.gz
-        sudo apt-get update
-        sudo apt-get install -y python3-pip
-        pip3 install awscli --upgrade
-      shell: bash
+    - name: Install kubectl, helm, and awscli
+      uses: ./.github/actions/deploy/install-kubectl
 
     - name: Configure kubectl
       run: |
