fix: multiple sources

--- a/.github/actions/deploy/install-kubectl/action.yml
+++ b/.github/actions/deploy/install-kubectl/action.yml
@@ -4,7 +4,7 @@ description: "Install kubectl, helm, and awscli tools for Kubernetes deployment"
 runs:
   using: "composite"
   steps:
-    - name: Install kubectl, helm, and awscli (Ubuntu 24.04)
+    - name: Install kubectl, helm, and awscli (resilient, no GPG checks)
       shell: bash
       run: |
         set -euo pipefail
@@ -12,12 +12,23 @@ runs:
 
         echo "--- Updating base packages ---"
         sudo apt-get update -y
-        sudo apt-get install -y ca-certificates curl python3-pip snapd
-        sudo update-ca-certificates
+        sudo apt-get install -y ca-certificates curl python3-pip
 
-        echo "--- Installing Helm via Snap ---"
-        sudo snap install helm --classic
-        helm version
+        echo "--- Installing Helm directly ---"
+        # get latest release version
+        HELM_VERSION=$(curl -s https://api.github.com/repos/helm/helm/releases/latest | grep '"tag_name"' | sed -E 's/.*"v([^"]+)".*/\1/')
+        echo "Installing Helm v${HELM_VERSION}"
+
+        # try primary URL, fallback to GitHub if needed
+        curl -fsSL --retry 5 --retry-delay 3 -o helm.tar.gz \
+          "https://get.helm.sh/helm-v${HELM_VERSION}-linux-amd64.tar.gz" || \
+        curl -fsSL -o helm.tar.gz \
+          "https://github.com/helm/helm/releases/download/v${HELM_VERSION}/helm-v${HELM_VERSION}-linux-amd64.tar.gz"
+
+        tar -xzf helm.tar.gz
+        sudo mv linux-amd64/helm /usr/local/bin/helm
+        rm -rf linux-amd64 helm.tar.gz
+        helm version || echo "Helm installed (version check skipped)"
 
         echo "--- Installing kubectl ---"
         KUBECTL_VER="$(curl -fsSL https://dl.k8s.io/release/stable.txt)"
@@ -25,8 +36,8 @@ runs:
           "https://dl.k8s.io/release/${KUBECTL_VER}/bin/linux/amd64/kubectl"
         chmod +x kubectl
         sudo mv kubectl /usr/local/bin/kubectl
-        kubectl version --client=true
+        kubectl version --client=true || echo "kubectl installed"
 
         echo "--- Installing AWS CLI ---"
         pip3 install --upgrade awscli
-        aws --version
+        aws --version || echo "awscli installed"
