change: Benchmark selection pallet (#1045)
(cherry picked from commit 007c586535cdca79cfa3082399d6fdd0022183b5)

--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -79,7 +79,6 @@ pallet-session-validator-management = { workspace = true, features = [
 	"pallet-session-compat",
 ] }
 sp-session-validator-management = { workspace = true, features = ["serde"] }
-pallet-session-validator-management-benchmarking = { workspace = true, optional = true }
 sidechain-domain = { workspace = true, features = ["serde"] }
 sidechain-slots = { workspace = true }
 pallet-address-associations = { workspace = true }
@@ -133,7 +132,6 @@ std = [
 	"pallet-sudo/std",
 	"pallet-partner-chains-session/std",
 	"pallet-session-validator-management/std",
-	"pallet-session-validator-management-benchmarking?/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment-rpc-runtime-api/std",
 	"pallet-transaction-payment/std",
@@ -191,6 +189,7 @@ runtime-benchmarks = [
 	"pallet-block-participation/runtime-benchmarks",
 	"pallet-governed-map/runtime-benchmarks",
 	"pallet-partner-chains-bridge/runtime-benchmarks",
+	"pallet-session-validator-management/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-try-runtime/try-runtime",
