--- a/toolkit/committee-selection/pallet/Cargo.toml
+++ b/toolkit/committee-selection/pallet/Cargo.toml
@@ -30,6 +30,7 @@ sidechain-domain = { workspace = true }
 derive-new = { workspace = true, optional = true }
 pallet-session = { workspace = true, optional = true }
 pallet-partner-chains-session = { workspace = true, optional = true }
+frame-benchmarking = { workspace = true, optional = true }
 
 [dev-dependencies]
 sp-io = { workspace = true }
@@ -52,10 +53,16 @@ std = [
     "derive-new?/std",
     "pallet-session?/std",
     "pallet-partner-chains-session?/std",
+    "frame-benchmarking?/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
 pallet-session-compat = [
     "derive-new",
     "pallet-session",
     "pallet-partner-chains-session",
+]
+runtime-benchmarks = [
+    "frame-benchmarking/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "frame-system/runtime-benchmarks",
 ]
